fix banner overlay on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -561,9 +561,16 @@ span {
   flex-direction: row;
   height: 100vh;
   width: 100%;
-  justify-content: center;
   flex-direction: column;
   color: white;
+}
+
+.home-header-grid img {
+  margin-top: 130px;
+}
+
+.home-header-grid h1 {
+  margin: 80px 0;
 }
 
 .header-text {
@@ -1379,6 +1386,13 @@ h5 {
   }
 
   .home-header-grid img {
+    margin-top: 100px;
+    height: 230px;
+  }
+
+  .home-header-grid h1 {
+    margin: 50px 0;
+    font-size: 25px;
   }
 
   .banner-overlay {
